5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2498.log
== SUBMITION (2019-05-09 17:14:34) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100

t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	ha=
	hb=
	t=t+1

	print(t)

-- EXECUTION TIME:
0.281769
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 23
    ha=
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:14:40) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100

t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	ha=
	hb=
	t=t+1

	print(t)

-- EXECUTION TIME:
0.132939
-- ERROR:
  File "/home/codebench/codes/1716/2498/main.py", line 23
    ha=
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:14:40) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100

t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	ha=
	hb=
	t=t+1

	print(t)

-- ERROR:
File "XXXX", line 23
    ha=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:18) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	ha=
	hb=
	t=t+1

	print(t)

-- ERROR:
File "XXXX", line 22
    ha=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:26) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
510.834
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:289: creating new parent process caused "container_linux.go:1657: running lstat on namespace path \"/proc/166357/ns/ipc\" caused \"lstat /proc/166357/ns/ipc: no such file or directory\"": unknown
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
510.802
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
510.854
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
510.913
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
510.958
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:

-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:26:27) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
533.895
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
task 7af34f96781f1dc170c0313b5e0532bbe58e6eddc93981ce3b8bcb774a1350ea not found: not found
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:28:05) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	n_hab_a = n_hab_a + acrescimo_a
	n_hab_b = n_hab_b + acrescimo_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
0.207545
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:28:05) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	n_hab_a = n_hab_a + acrescimo_a
	n_hab_b = n_hab_b + acrescimo_b
	
	t=t+1

	print(t)

-- EXECUTION TIME:
0.228368
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:28:16) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	n_hab_a = n_hab_a + acrescimo_a
	n_hab_b = n_hab_b + acrescimo_b
	t=t+1

print(t)

-- EXECUTION TIME:
0.176485
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:33:34) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	n_hab_a = n_hab_a + acrescimo_a
	n_hab_b = n_hab_b + acrescimo_b
	
	t=t+1

print(t)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:11:13) 
-- CODE:
#Número de habitantes de uma cidade A
n_hab_a = int(input('Digite o numero de habitantes da Cidade A:   '))

#Número de habitantes de uma cidade B
n_hab_b = int(input('Digite o numero de habitantes da Cidade B:   '))

#Percentual de crescimento populacional da cidade A
taxa_a = float(input('taxa de crescimento da Cidade B:  '))

#Percentual de crescimento populacional da cidade B
taxa_b = float(input('taxa de crescimento da Cidade B:  '))

percentual_a = taxa_a / 100
percentual_b = taxa_b / 100
t=0

# A população da cidade A é menor que a população da cidade B

while(n_hab_a < n_hab_b):
	acrescimo_a = n_hab_a * percentual_a 
	acrescimo_b = n_hab_b * percentual_b
	n_hab_a = n_hab_a + acrescimo_a
	n_hab_b = n_hab_b + acrescimo_b
	
	t=t+1

print(t)

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
